# ACE-RISCV

./: .gitignore  .gitmodules  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  macos_env  rust-toolchain.toml
confidential-vms/baremetal/: Cargo.toml  Makefile
confidential-vms/baremetal/rootfs/: run_baremetal.sh  test_esm.sh
confidential-vms/baremetal/src/: error.rs  hal.rs  macros.rs  main.rs  sync.rs  trap.rs  uart.rs  virtio.rs  worker.rs
confidential-vms/baremetal/src/asm/: boot.S  trap.S
confidential-vms/baremetal/src/calls/: ace.rs  mod.rs  sm.rs
confidential-vms/baremetal/src/platform/: virt.lds
security-monitor/: .rustfmt.toml  Cargo.toml  Makefile  README.md  rust-toolchain.toml  rustc-ice-2024-02-26T15_42_49-1014536.txt
security-monitor/.cargo/: audit.toml
security-monitor/platform/: opensbi_v1.4.patch
security-monitor/platform/generic/: Kconfig  config.mk  objects.mk  platform.c  platform_override_modules.carray  sifive_fu540.c
security-monitor/platform/generic/configs/: defconfig
security-monitor/platform/generic/include/: platform_override.h
security-monitor/platform/p550/: README.md
security-monitor/rust-crates/: opensbi.sh
security-monitor/rust-crates/cove_tap/: Cargo.toml
security-monitor/rust-crates/cove_tap/src/: error.rs  lib.rs  parser.rs  serializer.rs  spec.rs
security-monitor/rust-crates/flattened_device_tree/: Cargo.toml
security-monitor/rust-crates/flattened_device_tree/src/: error.rs  lib.rs
security-monitor/rust-crates/opensbi-sys/: Cargo.toml  build.rs
security-monitor/rust-crates/opensbi-sys/src/: __bindings.rs  lib.rs  wrapper.h
security-monitor/rust-crates/pointers_utility/: Cargo.toml
security-monitor/rust-crates/pointers_utility/src/: error.rs  lib.rs
security-monitor/rust-crates/riscv_cove_tap/: Cargo.toml
security-monitor/rust-crates/riscv_cove_tap/src/: debug.rs  error.rs  lib.rs  parser.rs  serializer.rs  spec.rs
security-monitor/src/: README.md  debug.rs  error.rs  lib.rs
security-monitor/src/confidential_flow/: apply_to_confidential_vm.rs  declassify_to_confidential_vm.rs  declassify_to_hypervisor.rs  finite_state_machine.rs  mod.rs
security-monitor/src/confidential_flow/context_switch/: enter_from_confidential_hart.S  enter_from_confidential_vm.S  exit_to_confidential_hart.S  exit_to_confidential_vm.S  mod.rs  switch_security_domains.S
security-monitor/src/confidential_flow/control_flow/: apply_to_confidential_vm.rs  declassify_to_confidential_vm.rs  declassify_to_hypervisor.rs  mod.rs
security-monitor/src/confidential_flow/handlers/: guest_instruction_page_fault.rs  guest_load_page_fault.rs  guest_load_page_fault_result.rs  guest_store_page_fault.rs  guest_store_page_fault_result.rs  hypercall.rs  hypercall_result.rs  inter_hart_request.rs  interrupt.rs  invalid_call.rs  mmio.rs  mod.rs  print_debug_info.rs  required.rs  sbi_hsm_hart_start.rs  sbi_hsm_hart_status.rs  sbi_hsm_hart_stop.rs  sbi_hsm_hart_suspend.rs  sbi_ipi.rs  sbi_probe_extension.rs  sbi_rfence_nop.rs  sbi_srst.rs  share_page.rs  share_page_result.rs  shared_page.rs  shutdown.rs  shutdown_confidential_hart.rs  smp.rs  unshare_page.rs  virtual_instruction_request.rs
security-monitor/src/confidential_flow/lightweight_context_switch/: enter_from_confidential_hart.S  exit_to_confidential_hart.S  mod.rs
security-monitor/src/core/: mod.rs  panic.rs
security-monitor/src/core/arch/: mod.rs
security-monitor/src/core/architecture/: mod.rs
security-monitor/src/core/configuration/: mod.rs
security-monitor/src/core/control_data/: confidential_hart.rs  confidential_hart_remote_command.rs  confidential_vm.rs  confidential_vm_id.rs  confidential_vm_measurement.rs  confidential_vm_memory_layout.rs  confidential_vm_mmio_region.rs  hardware_hart.rs  hypervisor_hart.rs  inter_hart_request.rs  mod.rs  pending_request.rs  resumable_operation.rs  storage.rs
security-monitor/src/core/hardware_setup/: mod.rs
security-monitor/src/core/hart/: fp_registers.rs  gp_registers.rs  hart_state.rs  mod.rs
security-monitor/src/core/heap/: allocator.rs  mod.rs
security-monitor/src/core/heap_allocator/: allocator.rs  buddy_allocator.rs  mod.rs
security-monitor/src/core/initialization/: mod.rs
security-monitor/src/core/interrupt_controller/: mod.rs
security-monitor/src/core/memory_layout/: confidential_memory_address.rs  confidential_vm_physical_address.rs  confidential_vm_virtual_address.rs  mod.rs  non_confidential_memory_address.rs
security-monitor/src/core/memory_partitioner/: confidential_memory_address.rs  mod.rs  non_confidential_memory_address.rs
security-monitor/src/core/memory_protector/: confidential_vm_memory_layout.rs  confidential_vm_memory_protector.rs  hypervisor_memory_protector.rs  mod.rs
security-monitor/src/core/memory_tracker/: memory_address.rs  memory_tracker.rs  mod.rs  page.rs  shared_page.rs
security-monitor/src/core/mmu/: mod.rs  page_size.rs  page_table.rs  page_table_entry.rs  page_table_memory.rs  paging_system.rs
security-monitor/src/core/page_allocator/: allocator.rs  mod.rs  page.rs  page_allocator.rs  shared_page.rs
security-monitor/src/core/pmp/: confidential_memory_address.rs  memory_layout.rs  mod.rs  non_confidential_memory_address.rs
security-monitor/src/core/time_controller/: mod.rs
security-monitor/src/core/timer_controller/: mod.rs
security-monitor/src/core/transformations/: convert_to_confidential_vm_request.rs  esm_request.rs  guest_load_page_fault_request.rs  guest_load_page_fault_result.rs  guest_store_page_fault_request.rs  interrupt.rs  (+30 more)
security-monitor/src/non_confidential_flow/: apply_to_hypervisor.rs  declassify_to_hypervisor.rs  finite_state_machine.rs  mod.rs
tools/cove_tap_tool/: Cargo.toml  Makefile
tools/cove_tap_tool/src/: attach.rs  error.rs  generate.rs  main.rs  measure.rs
tools/local_attestation/: Cargo.toml  Makefile  README.md
tools/local_attestation/src/: append.rs  constants.rs  error.rs  generate.rs  main.rs
verification/theories/page_allocator/: dune  page.v  page_allocator.v
verification/theories/page_table/: dune  page_table.v
(+448 files in other folders)
