[package]
name = "security-monitor"
version = "0.3.0"
authors = ["Wojciech Ozga <woz@zurich.ibm.com>"]
description = "Assured Confidential Execution (ACE): security monitor implementation targetting RISC-V"
edition = "2021"

[dependencies]
# This crate decodes RISC-V instructions unfortunately it does not support the C-instructions yet
riscv-decode = "0.2" 

# The `fdt` crate provides a parser of flattened device tree (FDT) data. Used in the initialization procedure
# and when converting a VM into a confidential VM.
fdt = "0.1.5"

# Rust bindings to OpenSBI C code.
opensbi-sys = {path = "rust-crates/opensbi-sys"}

# The `spin` crate provides synchronization primitives (Mutexes etc) using spinlocks
spin = {version="0.9", default-features = false, features = ["once", "rwlock", "spin_mutex"]}

# This is our custom utility library to work with raw pointers. We might get rid of it in future, once there is
# an equivalent for it in the standard Rust library
pointers_utility = {path = "rust-crates/pointers_utility"}

# Memoffset automatize calculating offsets to internal fields of Rust structures. These offsets are used then by 
# assembly code in the context switch implementation.
memoffset = { version = "0.8", default-features = false, features = ["unstable_const"] }

# provides macros that help removing boilerplate code in the rust error handling
thiserror-no-std = "2.0" 

[lib]
name="ace"
crate-type=["staticlib"]

[features]
# verbose feature enables printing out debug information from the security monitor
verbose = []

[profile.release]
# required by https://crates.io/crates/cargo-call-stack
lto = 'fat'
# enables check for integer overflows in runtime. This will incurrs performance overhead
# a properly done formal verification of the security monitor would obsolete this feature
overflow-checks = true
