[package]
name = "cove-tap-tool"
version = "0.1.0"
authors = ["Wojciech Ozga <woz@zurich.ibm.com>"]
description = "Tool to create TVM attestation payload for CoVE's confidential VM"
edition = "2021"

[dependencies]
clap = { version="4.5", features = ["derive"] } # for command line argument parsing
clap-num = "1.2.0"
byteorder = "1.5" # to serialize numbers using little/big endianness
sha2 = "0.10" # to calculate integrity measurements of kernel, initramfs etc.
riscv_cove_tap = {path="../../security-monitor/rust-crates/riscv_cove_tap", features=["parser", "serializer"]}

thiserror = "1.0"  # provides macros that help removing boilerplate code in the rust error handling
