[package]
name = "pointers_utility"
version = "0.2.0"
authors = ["Wojciech Ozga <woz@zurich.ibm.com>"]
description = "A utility library that provides a safer abstraction to perform arithmetic on raw pointers"
edition = "2024"

[dependencies]

# provides macros that help removing boilerplate code in rust error handling
thiserror-no-std = "2.0"