(coq.theory
 (name ace.theories.page_allocator)
 (package ace)
 (flags -w -notation-overridden -w -redundant-canonical-projection)
 (synopsis "Manual proofs for ACE Security Monitor page allocator")
 (theories stdpp iris Ltac2 caesium lithium lrust RecordUpdate Equations refinedrust ace.theories.base))
