(coq.theory
 (name ace.theories.page_allocator)
 (package ace)
 (flags -w -notation-overridden -w -redundant-canonical-projection)
 (synopsis "Manual proofs for ACE Security Monitor page allocator")
 (theories Stdlib stdpp iris iris_contrib Ltac2 caesium lithium lrust Equations refinedrust rrstd.cmp.theories ace.theories.base))
