(coq.theory
 (name ace.theories.page_table)
 (package ace)
 (flags -w -notation-overridden -w -redundant-canonical-projection)
 (synopsis "Manual proofs for ACE Security Monitor page table")
 (theories Stdlib stdpp iris iris_contrib Ltac2 caesium lithium lrust Equations refinedrust ace.theories.page_allocator))
